@@ -42,3 +42,6 @@ Fix: Social & Skill js bug
 some more hooks & filters
 fix bug extend jobs expired date
 fix bug job search widget wrong parameter
+add wallets component (marketpress required)
+add charging when saving new expert profile
+add charging when saving new job
